--- a/chasing-dreams/client/src/index.css
+++ b/chasing-dreams/client/src/index.css
@@ -328,6 +328,10 @@ a {
 }
 .hero {
   background-image: url("./assets/images/hero.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment:fixed;
+  background-position: center;
   width: 100%;
   height: 600px;
 }
