--- a/client/src/index.css
+++ b/client/src/index.css
@@ -26,7 +26,7 @@ h6 {
   width: 100%;
   justify-content: center;
   
-  background-color: var(--secondary);
+  background-color: black;
   padding-top: 20px;
   padding: 10px;
   
