Got rid of footer whitespace

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -93,6 +93,10 @@ h6 {
   margin: 0px auto 5px auto;
 }
 
+.card-stack {
+  padding: 5px 0 100px 0;
+}
+
 .cardImage {
   display: block;
   width: 40%;
