--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,6 +9,7 @@ h4,
 h5,
 h6 {
   font-family: "Rubik Mono One", sans-serif;
+  padding-top: 5px;
 }
 
 .small {
@@ -19,6 +20,7 @@ h6 {
 /* Footer styling */
 #spacing {
   height: 100px;
+  background-color: transparent;
 }
 .footer {
   display: flex;
@@ -38,6 +40,14 @@ h6 {
   height: 48px;
   margin-bottom: 10px;
   margin-right: 40px;
+}
+.copyright {
+  display: block;
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  font-size: small;
+  color: rgb(150, 150, 150);
 }
 
 .hero {
@@ -61,12 +71,14 @@ h6 {
   width: 35%;
   text-align: center;
   margin: 3.5%;
-  color: #fff;
+  color: rgb(255, 255, 255);
   font-size: 18px;
   line-height: 1.2;
   padding: 20px;
-  background-color: orange;
+  background-color: rgba(175, 114, 0, 0.75);
   margin-top: 10px;
+  border: 3px solid white;
+  box-shadow: 0 0 12px 4px rgba(0, 0, 0, 0.5);
 }
 .hero-cta h2 {
   font-style: italic;
@@ -76,10 +88,30 @@ h6 {
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
+.searchForm {
+  padding-bottom: 20px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.searchFormInput {
+  margin-right: 5px;
+  font-size: 1.5rem;
+}
+
 .cardImage {
   display: block;
-  width: 40%;
+  max-width: 40%;
+  max-height: 400px;
+  width: auto;
+  height: auto;
   float: right;
+}
+
+/* react-bootstrap alterations */
+
+.navbar-brand {
+  margin-right: 3rem;
 }
 
 /* smaller desktop */
@@ -94,6 +126,10 @@ h6 {
     width: 36px;
     height: 36px;
   }
+
+  .navbar-brand {
+    margin-right: 1rem;
+  }
 }
 
 /* tablets */
@@ -107,16 +143,17 @@ h6 {
     float: none;
     margin-left: auto;
     margin-right: auto;
-    width: 80%;
+    max-width: 80%;
+    max-height: 300px;
+    width: auto;
+    height: auto;
   }
 
   #spacing {
     height: 70px;
   }
-  .footer {
+  .copyright {
     font-size: x-small;
-    padding: 5px;
-    padding-top: 10px;
   }
 
   .logos {
@@ -124,6 +161,21 @@ h6 {
     height: 28px;
     margin-bottom: 5px;
     margin-right: 20px;
+  }
+
+  .searchForm {
+    flex-direction: column;
+    align-content: center;
+    padding-bottom: 10px;
+  }
+
+  .searchFormInput {
+    font-size: 1.25rem;
+  }
+
+  .searchBtn {
+    margin-top: 5px;
+    font-size: 1.25rem;
   }
 }
 
@@ -141,14 +193,17 @@ h6 {
 
   .cardImage {
     float: none;
-    width: 90%;
+    max-width: 90%;
+    max-height: 250px;
+    max-width: auto;
+    height: auto;
   }
 
   #spacing {
     height: 55px;
   }
 
-  .footer {
+  .copyright {
     font-size: xx-small;
   }
 
@@ -157,5 +212,13 @@ h6 {
     height: 24px;
     margin-bottom: 5px;
     margin-right: 15px;
+  }
+
+  .searchFormInput {
+    font-size: 1rem;
+  }
+
+  .searchBtn {
+    font-size: 1.25rem;
   }
 }
