--- a/client/src/index.css
+++ b/client/src/index.css
@@ -57,6 +57,7 @@ h6 {
   background-repeat: no-repeat;
   width: 100%;
   height: 100%;
+  background-attachment: fixed;
 }
 
 .hero-home {
@@ -114,6 +115,7 @@ h6 {
 
 .card {
   margin: 0px auto 5px auto;
+  background-color: rgba(255, 255, 255, 0.8);
 }
 
 .card-stack {
